Fixed desc not centered

--- a/src/assets/styles/subscription.scss
+++ b/src/assets/styles/subscription.scss
@@ -298,9 +298,10 @@
 
     &--user_data {
         display: flex;
+        padding: 1em;
         flex-direction: column;
-        width: 75%;
         align-self: center;
+        align-items: center;
     }
 }
 
